# rust-axum-starter

./: Cargo.toml  config.toml
src/: main.rs
