[package]
name = "rust-axum-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
thiserror = "1.0.59"
anyhow = "1.0.82"
tower-http = { version = "0.5.2", features = ["trace"] }
tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "tracing",
] }
toml = "0.8.14"
